--- a/server/package.json
+++ b/server/package.json
@@ -15,8 +15,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "inversify": "^6.0.2",
     "jsonwebtoken": "^9.0.2",
-    "socket.io": "^4.7.5"
+    "reflect-metadata": "^0.2.2",
+    "socket.io": "^4.7.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
