--- a/server/package.json
+++ b/server/package.json
@@ -12,14 +12,15 @@
   "dependencies": {
     "@prisma/client": "^5.17.0",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "inversify": "^6.0.2",
     "jsonwebtoken": "^9.0.2",
     "reflect-metadata": "^0.2.2",
-    "socket.io": "^4.7.5",
-    "zod": "^3.23.8"
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
